# ai-video-editor

./: .cursorignore  .gitignore  MISTAKE_PATTERNS.md  ONE_VIDEO_WORKFLOW.html  ONE_VIDEO_WORKFLOW.md  ONE_VIDEO_WORKFLOW_ANIMATED.html  ONE_VIDEO_WORKFLOW_ANIMATED_HR.html  ONE_VIDEO_WORKFLOW_TECHNICAL.html  ONE_VIDEO_WORKFLOW_TECHNICAL_HR.html  PROJECT_DESCRIPTION.md  README.md  SECTION_EDITOR_EVALUATION.md  TASK_MANAGEMENT.md  main.py  pyproject.toml
.codex/: config.toml
.cursor/rules/: iteration-workflow.mdc  task-files.mdc  task-workflow.mdc
ai_video_editor/: __init__.py  __main__.py  decisions.py  llm.py  observability.py
ai_video_editor/audio/: __init__.py  denoise.py  disruption.py  extract.py  models.py  regions.py  silence.py  snap.py
ai_video_editor/cli/: __init__.py  app.py
ai_video_editor/config/: __init__.py  settings.py
ai_video_editor/duplicate/: __init__.py  aside.py  debug.py  edl.py  false_start_audio.py  gemini_verify.py  lexical.py  local_corrections.py  models.py  pipeline.py  redundancy.py  section_editor.py  semantic.py  stutter.py  windowed.py
ai_video_editor/enrich/: __init__.py  arbiter.py  cache.py  models.py  runner.py
ai_video_editor/experiments/: __init__.py  manifest.py  reconstruction.py  repeat_eval.py  runner.py  scoring.py  section_pilot.py
ai_video_editor/logging/: __init__.py  setup.py
ai_video_editor/qa/: __init__.py  alignment.py  continuity.py  decision_eval.py  ground_truth.py  models.py  regression.py  report.py  spectrogram.py  splice.py
ai_video_editor/render/: __init__.py  assemble.py
ai_video_editor/review/: __init__.py  export.py  models.py
ai_video_editor/transcription/: __init__.py  cache.py  chunking.py  (+7 more)
frontend/: .oxfmtrc.json  .oxlintrc.json  .prettierignore  README.md  components.json  package-lock.json  package.json  vite.config.ts
iterations/: CURRENT_BASELINE.md  DECISION_HISTORY.md  ITERATION_LOG.md  WORKFLOW.md  current-baseline.json
manifests/: openai-gpt55-direct.json  openrouter-correctness-quality.json  openrouter-correctness.json  openrouter-phase1-worst2.json  section-sweep.json  take-selection-last.json
scripts/: run_full_pipeline.py  run_qa.py
tests/: conftest.py  test_audio_snap.py  test_diff.py  test_disruption.py  test_duplicate_detection.py  test_edl.py  test_enrichment.py  test_grammar_report.py  test_local_corrections.py  test_model_experiments.py  test_observability.py  test_qa.py  test_review.py  test_section_editor.py
(+202 files in other folders)
